--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   "author": "TCSS 450",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "form-data": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.7.5",
     "npm": "^6.14.0",
     "pg": "^8.0.2",
     "pushy": "^2.0.8"
