--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
   "author": "TCSS 450",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "form-data": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.5",
     "npm": "^6.14.0",
     "pg": "^8.0.2",
-    "pushy": "^2.0.8"
+    "pushy": "^2.0.8",
+    "urlencoded-body-parser": "^3.0.0"
   }
 }
